src/test/deca/extension/codegen/invalid/result/test_modification_dimension_output_expected.res
Error: table_dimension_can_not_be_changed
